--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@types/node": "^15.6.1",
 		"discord.js": "^12.5.3",
+		"mongodb": "^4.0.0",
 		"typescript": "^4.3.2"
 	},
 	"devDependencies": {
