--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@types/node": "^15.6.1",
-		"discord.js": "^12.5.3",
+		"discord.js": "^13.0.0-dev.02f55f0.1626782659",
 		"mongodb": "^4.0.0",
 		"typescript": "^4.3.2"
 	},
