--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"@types/node": "^15.6.1",
-		"discord.js": "^13.0.0-dev.02f55f0.1626782659",
-		"mongodb": "^4.0.0",
+		"discord.js": "^13.0.1",
+		"mongodb": "^4.1.0",
 		"typescript": "^4.3.2"
 	},
 	"devDependencies": {
