--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
 	"name": "JellyBot",
-	"version": "1.0.0",
+	"version": "0.0.1a",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
 		"lint": "npx eslint . && npx prettier --check .",
 		"build": "tsc",
-		"start": "node dist/index.js",
-		"test": "npm run build && npm start",
+		"start": "npm run build && node dist/index.js",
 		"check": "npm run build && npm run lint"
 	},
 	"author": "",
